# differential_drive_robot

./: CMakeLists.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: two_wheel_robot.pc
devel/share/two_wheel_robot/cmake/: two_wheel_robotConfig.cmake
install/: setup.sh
install/lib/pkgconfig/: two_wheel_robot.pc
install/share/two_wheel_robot/launch/: display.launch  gazebo.launch
install/share/two_wheel_robot/urdf/: two_wheel_robot.csv
meshes/: base_link.STL  left_wheel.STL
scripts/: drive.py
src/: CMakeLists.txt  Makefile  ROS_Drive.ino  package.xml  setup.sh
src/build-mega2560/: ROS_Drive.ino.d  sketchbook.elf  sketchbook.hex
src/ddr_rviz/: CMakeLists.txt  config_file.rviz  package.xml
src/ddr_urdf/: CMakeLists.txt  ddr_urdf.csv  ddr_urdf.urdf  package.xml
src/ddr_urdf/meshes/: right_wheel.STL
src/drive/: Makefile  drive.ino  enc_1.h  enc_4.h
src/launch/: display.launch  gazebo.launch  move_base.launch
src/my_robot_name_2dnav/: package.xml
src/nav/: CMakeLists.txt  package.xml
src/nav/config/: base_local_planner.yaml  costmap_common_params.yaml
src/scripts/: .drive_controller.py.swp  drive.py  drive_controller.py
src/urdf/: .two_wheel_robot.urdf.swp  two_wheel_robot.urdf
